Better registry-based tag handling